fixed bugs on long press on mobile

--- a/src/components/Square/Square.css
+++ b/src/components/Square/Square.css
@@ -4,10 +4,14 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    user-select: none;
     border: 1px solid #df6da9;
     font-size: 1.2rem;
     transition: background-color 0.3s, transform 0.3s;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    touch-action: manipulation;
 }
 
 .square:hover {
@@ -34,15 +38,6 @@
     width: 28px;
     height: 28px;
     display: block;
-}
-
-
-.square {
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    touch-action: manipulation;
 }
 
 img {
